--- a/e_m_bot/templates/login.html
+++ b/e_m_bot/templates/login.html
@@ -4,16 +4,17 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
     {% if error %}
-        <p style="color: red;">{{ error }}</p>
+    <p>{{ error }}</p>
     {% endif %}
-    <form method="POST" action="" >
+    <form method="post">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="username" name="username" required>
+        <br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Login">
+        <input type="password" id="password" name="password" required>
+        <br>
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
