--- a/e_m_bot/templates/lessons.html
+++ b/e_m_bot/templates/lessons.html
@@ -54,13 +54,13 @@
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link " href="">
+            <a class="nav-link " href="{{ url_for('dashboard') }}">
               <span data-feather="home"></span>
               Dashboard <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="app.lessons.html">
+            <a class="nav-link active" href="{{ url_for('lessons') }}">
               <span data-feather="file"></span>
               My Classes
             </a>
@@ -108,7 +108,7 @@
                     
       </section>
 
-      <section class="my-4 w-100" id="playground" width="900" height="380">
+      <!--<section class="my-4 w-100" id="playground" width="900" height="380">
         <h2>Tutor Bot</h2>
         <div class="table-responsive">
         </div>
@@ -124,6 +124,7 @@
         </form>
 
       </section>
+    -->
       <main>
         
       
@@ -150,6 +151,7 @@
                         </div>
                       </div>
                     </div>
+                    
                   </div>
                 <br>
               {% endfor %}
