dashboard page changes: images

--- a/e_m_bot/templates/dashboard.html
+++ b/e_m_bot/templates/dashboard.html
@@ -119,8 +119,8 @@
         <div class="row" data-masonry='{"percentPosition": true }'>
           <div class="col-sm-6 col-lg-4 mb-4">
             <div class="card">
-              <img src="https://picsum.photos/200/300" class="card-img-top" alt="..." width="100%" height="200">
-      
+              <img src="{{ url_for('static', filename='images/pexels-nothing-ahead-3729557.jpg') }}" alt="Example Image" class="card-img-top" alt="..." width="100%" height="200">
+              
               <div class="card-body">
                 <h5 class="card-title">Mathematics</h5>
                 <p class="card-text"> It develops critical thinking skills and is essential for science, technology, engineering, and further education. Assessed in national exams like KCSE, it equips students with quantitative reasoning abilities for various fields.</p>
@@ -129,11 +129,11 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <div class="card">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
-      
+              <img src="{{ url_for('static', filename='images/pexels-pixabay-267669.jpg') }}" alt="Example Image" class="card-img-top" alt="..." width="100%" height="200">
+              
               <div class="card-body">
-                <h5 class="card-title">Card title that wraps to a new line</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">English</h5>
+                <p class="card-text">It enhances reading, writing, speaking, and listening abilities. English promotes communication, critical thinking, and understanding of literature. It prepares students for further education, professional pursuits, and effective communication in diverse contexts.</p>
               </div>
             </div>
           </div>
